# portfolio-jaroslav-tech

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  docker-compose.override.yml  docker-compose.yml  mise.toml  requirements.txt  run-tests-verbose
src/: .pre-commit-config.yaml  Dockerfile  chart_api_tests.py  conftest.py  create_sample_data.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  simple_model_test.py  test_fixes.py
src/blog/: admin.py  apps.py  cache_monitoring.py  cache_service.py  cron.py  email_service.py  embed_processor.py  file_utils.py  forms.py  image_utils.py  image_utils_enhanced.py  middleware.py  models.py  related_posts_service.py  signals.py  sitemaps.py  syntax_highlighter.py  urls.py  views.py
src/blog/management/commands/: cache_stats.py  clear_blog_cache.py  optimize_images.py  setup_cleanup.py  warm_cache.py
src/blog/middleware/: __init__.py  analytics.py  cache_headers.py  cleanup.py  tracking.py
src/blog/migrations/: 0001_initial.py  0002_post_is_featured.py  0003_post_featured_image.py  0004_alter_post_content.py  0005_blogfile.py  0006_post_meta_description_post_meta_keywords.py  0007_add_discussion_url.py  0008_add_sharing_analytics.py  0009_newsletter.py  0010_add_postview_analytics.py  0011_upgrade_to_ckeditor5.py  0012_category_blog_catego_slug_fc0bb9_idx_and_more.py
src/blog/static/blog/css/: blog.css  (+1 more)
src/blog/templates/blog/: category_list.html  embed_demo.html  embed_guide.html  post_detail.html  post_list.html  saved_posts.html  search_results.html  tag_list.html
src/blog/templatetags/: blog_cache.py  blog_extras.py  image_tags.py  seo_tags.py  simple_embeds.py
src/blog/tests/: __init__.py  integration_test_cache.py  test_cache.py
src/core/: admin.py  context_processors.py  models.py  sitemaps.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/core/static/cv/: cv-cz.md  cv-en.md  cv.md
src/core/templates/: robots.txt
src/core/templates/core/: base.html  cv.html  home.html  index.html  robots.txt
src/devtracker/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/devtracker/management/commands/: create_demo_data.py  create_showcase_projects.py  create_third_project.py  enrich_demo_data.py
src/devtracker/migrations/: 0001_initial.py  0002_project_owner.py  0003_alter_project_owner.py  0004_trackersettings.py
src/devtracker/templates/: 404.html  500.html
src/devtracker/templates/admin/: base_site.html  login.html
src/devtracker/templates/devtracker/: base_tracker.html  dashboard.html  logged_out.html  login.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html  register.html  status_confirm_delete.html  status_form.html  status_list.html  task_confirm_delete.html  task_form.html  timelog_form.html
src/fixtures/: README.md  demo_data.json
src/jaroslav_tech/: asgi.py  settings.py  urls.py  wsgi.py
src/locale/cs/LC_MESSAGES/: django.po
src/portfolio/: views.py  wsgi.py
src/projects/: admin.py  forms.py  models.py  tests.py  urls.py  views.py  views.py.backup
src/projects/management/commands/: populate_demo_data.py
src/projects/migrations/: 0001_initial.py  0002_alter_userprofile_bio.py
src/projects/templates/projects/: dashboard.html  image_confirm_delete.html  image_upload.html  profile_form.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html  session_confirm_delete.html  session_form.html
src/projects/tests/: test_chart_apis.py  test_forms.py  test_models.py  test_views.py
src/static/devtracker/css/: tracker.css
src/tasks/: forms.py  models.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
src/tasks/tests/: test_forms.py  test_models.py  test_views.py
src/templates/core/: privacy_policy.html
(+66 files in other folders)
